// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SpaceButton metaspace should render notificationState if one is provided 1`] = `
<DocumentFragment>
  <div
    aria-label="People"
    class="mx_AccessibleButton mx_SpaceButton mx_SpaceButton_active"
    data-testid="create-space-button"
    role="button"
    tabindex="-1"
  >
    <div
      class="mx_SpaceButton_selectionWrapper"
    >
      <div
        class="mx_SpaceButton_avatarWrapper"
      >
        <div
          class="mx_SpaceButton_avatarPlaceholder"
        >
          <div
            class="mx_SpaceButton_icon"
          />
        </div>
        <div
          class="mx_SpacePanel_badgeContainer"
        >
          <div
            class="mx_AccessibleButton mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_notification mx_NotificationBadge_2char cpd-theme-light"
            role="button"
            tabindex="-1"
          >
            <span
              class="mx_NotificationBadge_count"
            >
              8
            </span>
          </div>
        </div>
      </div>
      <span
        class="mx_SpaceButton_name"
      >
        People
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpaceItem should render a space with subspaces 1`] = `
<DocumentFragment>
  <li
    aria-expanded="false"
    aria-selected="false"
    class="mx_SpaceItem collapsed hasSubSpaces"
    role="treeitem"
  >
    <div
      aria-label="Root Space"
      class="mx_AccessibleButton mx_SpaceButton"
      role="button"
      tabindex="-1"
    >
      <div
        aria-label="Expand"
        class="mx_AccessibleButton mx_SpaceButton_toggleCollapse"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
          />
        </svg>
      </div>
      <div
        class="mx_SpaceButton_selectionWrapper"
      >
        <div
          class="mx_SpaceButton_avatarWrapper"
        >
          <span
            aria-label="Avatar"
            class="_avatar_zysgz_8 mx_BaseAvatar"
            data-color="3"
            data-testid="avatar-img"
            data-type="round"
            style="--cpd-avatar-size: 32px;"
          >
            <img
              alt=""
              class="_image_zysgz_43"
              data-type="round"
              height="32px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="http://this.is.a.url/avatar.url/room.png"
              width="32px"
            />
          </span>
        </div>
        <span
          class="mx_SpaceButton_name"
        >
          Root Space
        </span>
        <div
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Space options"
          class="mx_AccessibleButton mx_SpaceButton_menuButton"
          role="button"
          tabindex="0"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
            />
          </svg>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`SpaceItem should render a space with subspaces 2`] = `
<DocumentFragment>
  <li
    aria-expanded="true"
    aria-selected="false"
    class="mx_SpaceItem hasSubSpaces"
    role="treeitem"
  >
    <div
      aria-label="Root Space"
      class="mx_AccessibleButton mx_SpaceButton"
      role="button"
      tabindex="-1"
    >
      <div
        aria-label="Collapse"
        class="mx_AccessibleButton mx_SpaceButton_toggleCollapse"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
          />
        </svg>
      </div>
      <div
        class="mx_SpaceButton_selectionWrapper"
      >
        <div
          class="mx_SpaceButton_avatarWrapper"
        >
          <span
            aria-label="Avatar"
            class="_avatar_zysgz_8 mx_BaseAvatar"
            data-color="3"
            data-testid="avatar-img"
            data-type="round"
            style="--cpd-avatar-size: 32px;"
          >
            <img
              alt=""
              class="_image_zysgz_43"
              data-type="round"
              height="32px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="http://this.is.a.url/avatar.url/room.png"
              width="32px"
            />
          </span>
        </div>
        <span
          class="mx_SpaceButton_name"
        >
          Root Space
        </span>
        <div
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Space options"
          class="mx_AccessibleButton mx_SpaceButton_menuButton"
          role="button"
          tabindex="0"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
            />
          </svg>
        </div>
      </div>
    </div>
    <ul
      class="mx_SpaceTreeLevel"
      role="group"
    >
      <li
        aria-selected="false"
        class="mx_SpaceItem"
        role="treeitem"
      >
        <div
          aria-label="Subspace"
          class="mx_AccessibleButton mx_SpaceButton"
          role="button"
          tabindex="-1"
        >
          <div
            class="mx_SpaceButton_selectionWrapper"
          >
            <div
              class="mx_SpaceButton_avatarWrapper"
            >
              <span
                aria-label="Avatar"
                class="_avatar_zysgz_8 mx_BaseAvatar"
                data-color="4"
                data-testid="avatar-img"
                data-type="round"
                style="--cpd-avatar-size: 24px;"
              >
                <img
                  alt=""
                  class="_image_zysgz_43"
                  data-type="round"
                  height="24px"
                  loading="lazy"
                  referrerpolicy="no-referrer"
                  src="http://this.is.a.url/avatar.url/room.png"
                  width="24px"
                />
              </span>
            </div>
            <span
              class="mx_SpaceButton_name"
            >
              Subspace
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Space options"
              class="mx_AccessibleButton mx_SpaceButton_menuButton"
              role="button"
              tabindex="0"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </li>
</DocumentFragment>
`;
